--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -243,12 +243,15 @@
                                                 <td>
                                                     <a class="btn btn-large btn-default " id="btnTVON">
                                                         <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
-                                                    <a class="btn btn-large btn-default " id="btnMenu">
-                                                        <i class="fa fa-home fa-3x pull-left"></i>主選單</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVEXIT">
-                                                        <i class="fa fa-reply fa-3x pull-left"></i>跳出</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVStop">
-                                                        <i class="fa fa-stop fa-3x pull-left"></i>靜止</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-home fa-3x pull-left"></i>節目表</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-reply fa-3x pull-left"></i>返回</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-wifi fa-3x pull-left"></i>廣播</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-info-circle fa-3x pull-left"></i>資訊</a>
+                                                    </a>
                                                 </td>
                                             </tr>
                                             <tr class="even gradeC">
@@ -256,15 +259,15 @@
                                                         <td>P</td> -->
                                                 <td>功能</td>
                                                 <td>
-                                                    <a class="btn btn-large btn-default" id="btnTVChannelUp">
-                                                        <i class="fa fa-chevron-circle-left fa-3x pull-left"></i>向上轉台</a>
-                                                    <a class="btn btn-large btn-default" id="btnTVChannelDown">
-                                                        <i class="fa  fa-chevron-circle-right fa-3x pull-left"></i>向下轉台</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVVoiceUp">
-                                                        <i class="fa fa-volume-up  fa-3x pull-left"></i>增加音量</a>
-                                                    <a class="btn btn-large btn-default" id="btnTVVoiceDown">
-                                                        <i class="fa fa-volume-down fa-3x pull-left"></i>減低音量</a>
-                                                    <a class="btn btn-large btn-default" id="btnTVMute">
+                                                    <a class="btn btn-large btn-default" id="btnTVUP">
+                                                        <i class="fa fa-chevron-circle-left fa-3x pull-left"></i>頻道+</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa  fa-chevron-circle-right fa-3x pull-left"></i>頻道-</a>
+                                                    <a class="btn btn-large btn-default " href="#">
+                                                        <i class="fa fa-volume-up  fa-3x pull-left"></i>音量+</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-volume-down fa-3x pull-left"></i>音量-</a>
+                                                    <a class="btn btn-large btn-default" href="#">
                                                         <i class="fa fa-microphone-slash fa-3x pull-left"></i>靜音</a>
                                                 </td>
                                             </tr>
@@ -275,33 +278,33 @@
                                                 <td>
                                                     <div class="row">
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV1"><i class="fa">1</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">1</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV2"><i class="fa">2</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">2</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV3"><i class="fa">3</i>
-                                                            </button>
-                                                        </div>
-                                                        <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV4"><i class="fa">4</i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV5"><i class="fa">5</i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV6"><i class="fa">6</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">3</i>
                                                             </button>
                                                         </div>
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV7"><i class="fa">7</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">4</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa" id="btnTV8">8</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">5</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV9"><i class="fa">9</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">6</i>
                                                             </button>
                                                         </div>
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV0"><i class="fa">0</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">7</i>
                                                             </button>
-                                                            <a class="btn btn-large btn-default" id="btnTVEnter">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">8</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">9</i>
+                                                            </button>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">0</i>
+                                                            </button>
+                                                            <a class="btn btn-large btn-default" href="#">
                                                                 <i class="fa fa-check fa-3x pull-left"></i>確認</a>
                                                         </div>
                                                     </div>
@@ -310,22 +313,36 @@
                                             <tr class="even gradeC">
                                                 <!--    <td>1</td>
                                                         <td>P</td> -->
-                                                <td>速度控制</td>
+                                                <td>其他控制</td>
                                                 <td>
                                                     <a class="btn btn-large btn-default" id="btnTVUP">
-                                                        <i class="fa  fa-fast-backward fa-3x pull-left" id="btnTV2Back"></i>兩倍倒帶</a>
+                                                        <i class="fa fa-search fa-3x pull-left"></i>搜尋</a>
                                                     <a class="btn btn-large btn-default" href="#">
-                                                        <i class="fa fa-backward fa-3x pull-left">
+                                                        <i class="fa fa-volume-off fa-3x pull-left">
                                                             
-                                                        </i>倒帶</a>
+                                                        </i>聲音</a>
                                                     <a class="btn btn-large btn-default " href="#">
-                                                        <i class="fa fa-pause fa-3x pull-left"></i>暫停</a>
+                                                        <i class="fa fa-tablet fa-3x pull-left"></i>畫面</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-bolt fa-3x pull-left"></i>省電
+                                                </td>
+                                            </tr>
+                                            <tr class="even gradeC">
+                                                <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                <td>我的最愛</td>
+                                                <td>
                                                     <a class="btn btn-large btn-default" href="#">
-                                                        <i class="fa fa-play fa-3x pull-left"></i>播放</a>
+                                                        <i class="fa fa-thumbs-up fa-3x pull-left"></i>喜愛一</a>
                                                     <a class="btn btn-large btn-default" href="#">
-                                                        <i class="fa fa-forward fa-3x pull-left"></i>快轉</a>
+                                                        <i class="fa fa-thumbs-up fa-3x pull-left"></i>喜愛二</a>
                                                     <a class="btn btn-large btn-default" href="#">
-                                                        <i class="fa fa-fast-forward fa-3x pull-left"></i>兩倍快轉</a>
+                                                        <i class="fa fa-thumbs-up fa-3x pull-left"></i>喜愛三</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-thumbs-up fa-3x pull-left"></i>喜愛四</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-thumbs-up fa-3x pull-left"></i>喜愛五</a>
+                                                    </a>
                                                 </td>
                                             </tr>
                                         </tbody>
