--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -198,9 +198,9 @@
                                                         <td>床頭 開關檯燈</td>
                                                         <td>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain11" > 檯燈1狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain11"> 檯燈1狀態</label>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain21" > 檯燈2狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain21"> 檯燈2狀態</label>
                                                             <label class="checkbox">
                                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain31"> 檯燈3狀態</label>
                                                         </td>
@@ -211,11 +211,11 @@
                                                         <td>門口 開關檯燈</td>
                                                         <td>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain12" > 檯燈1狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain12"> 檯燈1狀態</label>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain22" > 檯燈2狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain22"> 檯燈2狀態</label>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain32" > 檯燈3狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain32"> 檯燈3狀態</label>
                                                         </td>
                                                     </tr>
                                                 </tbody>
@@ -307,7 +307,8 @@
                                                             <a class="btn btn-large btn-default" id="btnTVEnter">
                                                                 <i class="fa fa-check fa-3x pull-left"></i>確認</a>
                                                         </div>
-                                                    </div>                                                </td>
+                                                    </div>
+                                                </td>
                                             </tr>
                                             <tr class="even gradeC">
                                                 <!--    <td>1</td>
