--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -144,6 +144,8 @@
                                     <h4>電器控制</h4>
                                     <div class="row">
                                         <div class="col-md-12">
+                                          <!--   <label class="checkbox">
+                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnTimer"> timer</label> -->
                                             <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
                                                 <thead>
                                                     <tr>
