修正schedule table width

--- a/pages/roomSchedule.html
+++ b/pages/roomSchedule.html
@@ -181,6 +181,7 @@
                                             <div class="panel-body">
                                                 <div class="dataTable_wrapper">
                                                     <h5 style="color:blue;">表單內選擇對應節點</h5>
+                                                    
                                                     <table class="table table-striped table-bordered table-hover" id="tableNodeSelect">
                                                         <thead>
                                                             <tr>
@@ -270,7 +271,7 @@
                                             <!-- /.panel-heading -->
                                             <div class="panel-body">
                                                 <div class="dataTable_wrapper">
-                                                    <table class="table table-striped table-bordered" id="tableScheduleSetting">
+                                                    <table class="table table-bordered" id="tableScheduleSetting">
                                                     </table>
                                                 </div>
                                             </div>
