--- a/pages/roomMainRoom.html
+++ b/pages/roomMainRoom.html
@@ -141,6 +141,8 @@
                                     <h4>電器控制</h4>
                                     <div class="row">
                                         <div class="col-md-12">
+                                          <!--   <label class="checkbox">
+                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnTimer"> timer</label> -->
                                             <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
                                                 <thead>
                                                     <tr>
@@ -189,6 +191,32 @@
                                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain3"> 檯燈3</label>
                                                         </td>
                                                     </tr>
+                                                    <tr class="odd gradeX">
+                                                        <!--  <td>1</td>
+                                                        <td>N</td> -->
+                                                        <td>床頭 開關檯燈</td>
+                                                        <td>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain11"> 檯燈1狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain21"> 檯燈2狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain31"> 檯燈3狀態</label>
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="odd gradeX">
+                                                        <!--  <td>1</td>
+                                                        <td>N</td> -->
+                                                        <td>門口 開關檯燈</td>
+                                                        <td>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain12"> 檯燈1狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain22"> 檯燈2狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain32"> 檯燈3狀態</label>
+                                                        </td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -214,13 +242,13 @@
                                                 <td>
                                                     <a class="btn btn-large btn-default " id="btnTVON">
                                                         <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnMenu">
                                                         <i class="fa fa-home fa-3x pull-left"></i>節目表</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnTVEXIT">
                                                         <i class="fa fa-reply fa-3x pull-left"></i>返回</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnTVBoardcast">
                                                         <i class="fa fa-wifi fa-3x pull-left"></i>廣播</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnTVinfo">
                                                         <i class="fa fa-info-circle fa-3x pull-left"></i>資訊</a>
                                                     </a>
                                                 </td>
@@ -230,15 +258,15 @@
                                                         <td>P</td> -->
                                                 <td>功能</td>
                                                 <td>
-                                                    <a class="btn btn-large btn-default" id="btnTVUP">
+                                                    <a class="btn btn-large btn-default" id="btnTVChannelUp">
                                                         <i class="fa fa-chevron-circle-left fa-3x pull-left"></i>頻道+</a>
-                                                    <a class="btn btn-large btn-default" href="#">
+                                                    <a class="btn btn-large btn-default" id="btnTVChannelDown">
                                                         <i class="fa  fa-chevron-circle-right fa-3x pull-left"></i>頻道-</a>
-                                                    <a class="btn btn-large btn-default " href="#">
+                                                    <a class="btn btn-large btn-default " id="btnTVVoiceUp">
                                                         <i class="fa fa-volume-up  fa-3x pull-left"></i>音量+</a>
-                                                    <a class="btn btn-large btn-default" href="#">
+                                                    <a class="btn btn-large btn-default" id="btnTVVoiceDown">
                                                         <i class="fa fa-volume-down fa-3x pull-left"></i>音量-</a>
-                                                    <a class="btn btn-large btn-default" href="#">
+                                                    <a class="btn btn-large btn-default" id="btnTVMute">
                                                         <i class="fa fa-microphone-slash fa-3x pull-left"></i>靜音</a>
                                                 </td>
                                             </tr>
@@ -249,33 +277,33 @@
                                                 <td>
                                                     <div class="row">
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">1</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV1"><i class="fa">1</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">2</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV2"><i class="fa">2</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">3</i>
-                                                            </button>
-                                                        </div>
-                                                        <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">4</i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">5</i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">6</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV3"><i class="fa">3</i>
                                                             </button>
                                                         </div>
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">7</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV4"><i class="fa">4</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">8</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV5"><i class="fa">5</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">9</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV6"><i class="fa">6</i>
                                                             </button>
                                                         </div>
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">0</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV7"><i class="fa">7</i>
                                                             </button>
-                                                            <a class="btn btn-large btn-default" href="#">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa" id="btnTV8">8</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV9"><i class="fa">9</i>
+                                                            </button>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV0"><i class="fa">0</i>
+                                                            </button>
+                                                            <a class="btn btn-large btn-default" id="btnTVEnter">
                                                                 <i class="fa fa-check fa-3x pull-left"></i>確認</a>
                                                         </div>
                                                     </div>
@@ -286,15 +314,15 @@
                                                         <td>P</td> -->
                                                 <td>其他控制</td>
                                                 <td>
-                                                    <a class="btn btn-large btn-default" id="btnTVUP">
+                                                    <a class="btn btn-large btn-default" id="btnTVScan">
                                                         <i class="fa fa-search fa-3x pull-left"></i>搜尋</a>
-                                                    <a class="btn btn-large btn-default" href="#">
+                                                    <a class="btn btn-large btn-default" id="btnTVLanguage">
                                                         <i class="fa fa-volume-off fa-3x pull-left">
                                                             
-                                                        </i>聲音</a>
-                                                    <a class="btn btn-large btn-default " href="#">
+                                                        </i>語言切換</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVDisplay">
                                                         <i class="fa fa-tablet fa-3x pull-left"></i>畫面</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnTVEenergy">
                                                         <i class="fa fa-bolt fa-3x pull-left"></i>省電
                                                 </td>
                                             </tr>
@@ -397,6 +425,7 @@
                         <!-- /.panel-body -->
                     </div>
                 </div>
+
             </div>
         </div>
         <!-- /#page-wrapper -->
@@ -411,11 +440,8 @@
     <!-- Morris Charts JavaScript -->
     <script src="../bower_components/raphael/raphael-min.js"></script>
     <script src="../bower_components/morrisjs/morris.min.js"></script>
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
-    <script src="../dist/js/JqueryREST.min.js"></script>
     <script src="../js/RestControlMainRoom.js"></script>
-    <script src="../dist/js/jquery.rest.js"></script>
+
     <!-- toggle button -->
     <script src="../bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
 </body>
