--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -12,18 +12,10 @@
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
     <link href="../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
-    <!-- Timeline CSS -->
-    <link href="../dist/css/timeline.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
-    <!-- Morris Charts CSS -->
-    <link href="../bower_components/morrisjs/morris.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="../bower_components/morrisjs/morris.css" rel="stylesheet" type="text/css">
-    <link href="../dist/css/jquery-ui.min.css" rel="stylesheet" type="text/css">
-    <link href="../dist/css/jquery-ui.structure.min.css" rel="stylesheet">
-    <link href="../dist/css/jquery-ui.theme.min.css" rel="stylesheet">
     <!-- Toggle button CSS -->
     <link href="../bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -441,9 +433,10 @@
     <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
-    <script src="../dist/js/JqueryREST.min.js"></script>
-    <script src="../js/RestControl.js"></script>
-    <script src="../dist/js/jquery.rest.js"></script>
+        <script src="../js/RestControl.js"></script>
+<!--     <script src="../dist/js/JqueryREST.min.js"></script>
+
+    <script src="../dist/js/jquery.rest.js"></script> -->
     <!-- toggle button -->
     <script src="../bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
 </body>
