--- a/pages/roomSetting.html
+++ b/pages/roomSetting.html
@@ -58,7 +58,7 @@
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-refresh fa-fw"></i> 手動控制<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-refresh fa-fw"></i> 家電控制<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="roomLiving.html">客廳</a>
