--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -114,8 +114,7 @@
                 </div>
                 <div class="row">
                     <div class="panel panel-info">
-                        <div class="panel-heading">
-                            控制面板
+                        <div class="panel-heading"><i class="fa fa-tachometer"></i> 控制面板
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -156,7 +155,7 @@
                                                         <td>
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnMainLight">
                                                         </td>
-                                                         <td>
+                                                        <td>
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnMainLightAlarm">
                                                         </td>
                                                     </tr>
@@ -167,7 +166,7 @@
                                                         <td>
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnWallLight">
                                                         </td>
-                                                          <td>
+                                                        <td>
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnWallLightAlarm">
                                                         </td>
                                                     </tr>
@@ -179,10 +178,9 @@
                                                         <td>
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnFan">
                                                         </td>
-                                                           <td>
+                                                        <td>
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnFanAlarm">
                                                         </td>
-
                                                     </tr>
                                                     <tr class="even gradeC">
                                                         <!--    <td>1</td>
@@ -196,11 +194,10 @@
                                                             <label class="checkbox">
                                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain3"> 檯燈3</label>
                                                         </td>
-                                                            <td>
+                                                        <td>
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnCurtainAlarm">
                                                         </td>
                                                     </tr>
-
                                                 </tbody>
                                             </table>
                                         </div>
@@ -221,7 +218,8 @@
                                                     <h4 class="modal-title">對碼模式開啟</h4>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>請點擊遙控器，進行紅外線對碼<br>等待3秒，確認是否測試成功</p>
+                                                    <p>請點擊遙控器，進行紅外線對碼
+                                                        <br>等待3秒，確認是否測試成功</p>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
