--- a/pages/roomSchedule.html
+++ b/pages/roomSchedule.html
@@ -16,7 +16,6 @@
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
     <!-- jquery-ui -->
     <link rel="stylesheet" href="../bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
     <!-- DataTables CSS -->
@@ -113,14 +112,15 @@
             </div>
             <div class="row">
                 <div class="panel panel-info">
-                    <div class="panel-heading">
-                        排程設定
+                    <div class="panel-heading"><i class="fa fa-tasks "></i> 排程設定
                     </div>
                     <div class="panel-body">
-                        <ul class="nav nav-pills">
-                            <li class="active"><a href="#scheduleView-pills" data-toggle="tab">排程預覽</a>
+                        <ul class="nav nav-pills ">
+                            <li class="active"><a href="#scheduleView-pills" data-toggle="tab"><i class="fa fa-list-alt"></i> 排程預覽</a>
                             </li>
-                            <li><a href="#scheduleAdd-pills" data-toggle="tab">設定排程</a>
+                            <li>
+                                <a href="#scheduleAdd-pills" data-toggle="tab">
+                                 <i class="fa fa-indent"></i> 設定排程</a>
                             </li>
                         </ul>
                         <!-- Tab panes -->
@@ -180,7 +180,6 @@
                                             <div class="panel-body">
                                                 <div class="dataTable_wrapper">
                                                     <h5 style="color:blue;">表單內選擇對應節點</h5>
-                                                    
                                                     <table class="table table-striped table-bordered table-hover" id="tableNodeSelect">
                                                         <thead>
                                                             <tr>
