--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -144,7 +144,7 @@
                                                         <th>類型</th> -->
                                                         <th>應用</th>
                                                         <th>控制</th>
-                                                        <th>過載警報</th>
+                                                        <th>使用狀態</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -156,7 +156,8 @@
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnMainLight">
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnMainLightAlarm">
+                                                            <div class="led led-green" id="btnMainLightAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <tr class="odd gradeX">
@@ -167,7 +168,8 @@
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnWallLight">
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnWallLightAlarm">
+                                                            <div class="led led-green" id="btnWallLightAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     </tr>
@@ -179,7 +181,8 @@
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnFan">
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnFanAlarm">
+                                                            <div class="led led-green" id="btnFanAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <tr class="even gradeC">
@@ -195,7 +198,8 @@
                                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain3"> 檯燈3</label>
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnCurtainAlarm">
+                                                            <div class="led led-green" id="btnCurtainAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                 </tbody>
