--- a/pages/roomMainRoom.html
+++ b/pages/roomMainRoom.html
@@ -145,7 +145,7 @@
                                                         <th>類型</th> -->
                                                         <th>應用</th>
                                                         <th>控制</th>
-                                                        <th>過載警報</th>
+                                                        <th>使用狀態</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -157,7 +157,8 @@
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnMainLight">
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnMainLightAlarm">
+                                                            <div class="led led-green" id="btnMainLightAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <tr class="odd gradeX">
@@ -168,7 +169,8 @@
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnWallLight">
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnWallLightAlarm">
+                                                            <div class="led led-green" id="btnWallLightAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     </tr>
@@ -180,7 +182,8 @@
                                                             <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnFan">
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnFanAlarm">
+                                                            <div class="led led-green" id="btnFanAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <tr class="even gradeC">
@@ -196,7 +199,8 @@
                                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain3"> 檯燈3</label>
                                                         </td>
                                                         <td>
-                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnCurtainAlarm">
+                                                            <div class="led led-green" id="btnCurtainAlarm">
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                 </tbody>
